rewrite item serialization again, clean up config classes